--- a/ros2_iiwa/iiwa_description/config/iiwa_controllers.yaml
+++ b/ros2_iiwa/iiwa_description/config/iiwa_controllers.yaml
@@ -56,6 +56,12 @@ velocity_controller:
 
 effort_controller:
   ros__parameters:
+    command_interfaces:
+      - effort
+    state_interfaces:
+      - position
+      - velocity
+      - effort
     joints:
       - joint_a1
       - joint_a2
@@ -64,6 +70,15 @@ effort_controller:
       - joint_a5
       - joint_a6
       - joint_a7
+    # pid: 
+    #    joint_a1: {p: 500.0, i: 100, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
+    #    joint_a2: {p: 500.0, i: 100, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
+    #    joint_a3: {p: 200.0, i: 10, d: 5.0, i_clamp_min: -10000, i_clamp_max: 10000}
+    #    joint_a4: {p: 200.0, i: 10, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
+    #    joint_a5: {p: 300.0, i: 5, d: 10.0, i_clamp_min: -10000, i_clamp_max: 10000}
+    #    joint_a6: {p: 50.0, i: 1, d: 1.0, i_clamp_min: -10000, i_clamp_max: 10000}
+    #    joint_a7: {p: 10.0, i: 0.1, d: 1.0, i_clamp_min: -10000, i_clamp_max: 10000}
+
 
 impedance_controller:
   ros__parameters:
